@@ -9,9 +9,9 @@ buildscript {
 
     dependencies {
         /* classpath 'io.fabric.tools:gradle:1.29.0'*/
-        classpath 'com.google.gms:google-services:4.3.4'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.google.gms:google-services:4.4.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.0'
+        classpath 'com.android.tools.build:gradle:8.2.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -30,8 +30,8 @@ android {
         applicationId "com.romerock.apps.utilities.cryptocurrencyconverter"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 1008013
-        versionName "1.8.13"
+        versionCode 1008015
+        versionName "1.8.15"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled false
     }
@@ -103,6 +103,10 @@ android {
             enableSplit = false
         }
     }
+    buildFeatures {
+        aidl true
+    }
+    namespace 'com.romerock.apps.utilities.cryptocurrencyconverter'
 }
 
 dependencies {
@@ -153,10 +157,16 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-crashlytics:18.4.0'
     implementation 'com.google.firebase:firebase-analytics'
-
-
+    implementation 'androidx.work:work-runtime:2.7.1'
 
 }
 
+tasks.withType(JavaCompile).configureEach{
+    options.fork = true
+    options.forkOptions.jvmArgs +=[
+            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+}
